# snapshot-queries

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  release.json  release.sh  requirements.txt  setup.cfg  setup.py  test.requirements.txt  test.sh  tox.ini
.github/workflows/: release.yml  tests.yml
django_snapshot_queries/: __init__.py  queries.py  query.py  sliceable_list.py  snapshot_queries.py  stacktrace.py  stacktrace_line.py
restaurant/: demo.py  manage.py
restaurant/data/: models.py
restaurant/data/migrations/: 0001_initial.py
restaurant/demo/: 4_beautiful_summaries.py  5_query_inspection.py  easy_to_use.py  problem_1.py  problem_2.py  problem_3.py  query_stacktrace.py
restaurant/demo/core/analysis/: functions.py
restaurant/restaurant/: settings.py  urls.py
restuarant/: manage.py
restuarant/data/: models.py
restuarant/data/migrations/: 0001_initial.py  0002_alter_dishes_cost.py
restuarant/restuarant/: asgi.py  settings.py  urls.py  wsgi.py
snapshot_queries/: __init__.py  optional_dependencies.py  queries.py  query.py  query_list.py  snapshot_queries.py  stacktrace.py  timedelta.py
snapshot_queries/testing/: __init__.py  assert_queries_match_mixin.py  default_query_filter.py  default_query_rewrite.py  pytest_fixture.py  pytest_plugin.py  snapshot_queries_django_test_case.py  snapshot_queries_test_case.py
tests/: test_snapshot_queries.py
tests/snapshots/: snap_test_snapshot_queries.py
tests/test_django/: test.sh
tests/test_django/settings/: settings.py  urls.py
tests/test_django/tests/: test_snapshot_queries.py
tests/test_django_project/: manage.py
tests/test_django_project/settings/: settings.py
tests/test_django_project/tests/: test_snapshot_queries.py
tests/test_project/: urls.py  wsgi.py
tests/test_sqlalchemy/: conftest.py  tables.py  test.sh  test_postgres.py  test_sqlite.py  transaction.py
tests/test_testing/: test_assert_queries_match_mixin.py
tests/unit/: test_assert_queries_match_mixin.py
(+4 files in other folders)
