[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "snapshot-queries"
description = "A tool for capturing queries executed in Django and SqlAlchemy"
version = "0.1.1"
authors = [{ "name" = "Cedar", "email" = "support@cedar.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "queries",
    "testing",
    "snapshots",
    "orm",
    "sql"
]
readme = "README.md"
requires-python = ">=3.6"
license = { "file" = "LICENSE.txt" }
dependencies = [
    "sqlparse>=0.4.1",
    "attrs>=20.3.0",
    "pygments>=2.8.1"
]

[project.optional-dependencies]
test = [
    "snapshottest==0.5.1",
    "psycopg2-binary==2.8.6",
    "nose==1.3.7",
    "tox==3.24.3",
    "ipdb",
]

[project.urls]
Homepage = "https://github.com/cedar-team/snapshot-queries"

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"
