[metadata]
name = snapshot-queries
author = Cedar
author_email = "support@cedar.com"
version = attr: snapshot_queries.VERSION
description = A tool for capturing queries executed in Django and SQLAlchemy
long_description = file: README.md
keywords = queries, testing, snapshots, orm, sql
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/cedar-team/snapshot-queries
python_requires = >=3.6

[options]
packages = find:
install_requires =
    sqlparse>=0.4.1
    attrs>=20.3.0
    pygments>=2.8.1

[options.packages.find]
include=
    snapshot_queries
    snapshot_queries.testing

[options.extras_require]
development =
    snapshottest==0.5.1
    pytest==7.1.1
    psycopg2-binary==2.8.6
    ipdb
linting =
    black==22.3.0
    flake8==4.0.1
    isort==5.10.1

[flake8]
ignore = E501,W503
